--- a/metqc/DESCRIPTION
+++ b/metqc/DESCRIPTION
@@ -13,7 +13,7 @@ Imports:
     reshape2,
     stringr
 Description: Quartet-based QCtools for metbolomics studies. 
-License: `use_mit_license()`
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
