refine report format

--- a/metqc/NAMESPACE
+++ b/metqc/NAMESPACE
@@ -16,11 +16,13 @@ importFrom(data.table,setDT)
 importFrom(data.table,setkey)
 importFrom(dplyr,"%>%")
 importFrom(flextable,align)
+importFrom(flextable,bg)
 importFrom(flextable,body_add_flextable)
 importFrom(flextable,bold)
 importFrom(flextable,color)
 importFrom(flextable,flextable)
 importFrom(flextable,set_caption)
+importFrom(flextable,theme_box)
 importFrom(flextable,theme_vanilla)
 importFrom(flextable,width)
 importFrom(ggplot2,aes)
